--- a/src/styles/keydata.css
+++ b/src/styles/keydata.css
@@ -35,7 +35,7 @@
   .keydata {
     width: 258px;
     padding: 32px 50px 32px 32px;
-    margin-bottom: 39px;
+    margin-bottom: 37px;
   }
 
   .keydata img {
